Fix build warning : -Wparentheses. https://bugs.webkit.org/show_bug.cgi?id=97961

Patch by Byungwoo Lee <bw80.lee@samsung.com> on 2012-09-29
Reviewed by Kentaro Hara.

Explicit braces are added around the && statement to fix -Wparentheses warning.

* mathml/MathMLElement.h:
(WebCore::toMathMLElement):

git-svn-id: svn://svn.chromium.org/blink/trunk@129977 bbb929c8-8fbe-4397-9dbb-9b2b20218538