third_party/WebKit/Source/WebCore/mathml/MathMLElement.h
@@ -55,7 +55,7 @@ private:
 
 inline MathMLElement* toMathMLElement(Node* node)
 {
-    ASSERT(!node || node->isElementNode() && static_cast<Element*>(node)->isMathMLElement());
+    ASSERT(!node || (node->isElementNode() && static_cast<Element*>(node)->isMathMLElement()));
     return static_cast<MathMLElement*>(node);
 }
 
